--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,6 @@
 /* Color */
 /* Flex */
 /* Gradient */
-/* Ratio */
 /* COMMON */
 body {
   color: #fff;
@@ -17,6 +16,13 @@ section {
 }
 section:first-child {
   padding-top: 0;
+}
+
+.inner {
+  position: relative;
+  max-width: 1240px;
+  padding: 0 20px;
+  margin: 0 auto;
 }
 
 img {
@@ -63,13 +69,7 @@ button:active {
   box-shadow: none;
 }
 
-.inner {
-  position: relative;
-  max-width: 1240px;
-  padding: 0 20px;
-  margin: 0 auto;
-}
-
+/* FONT */
 h2 {
   display: inline-block;
   text-transform: uppercase;
@@ -106,6 +106,7 @@ header .inner {
   height: 100%;
 }
 header .logo {
+  width: 36px;
   height: 24px;
 }
 header .logo img {
@@ -121,6 +122,10 @@ header .main_menu ul {
 header .main_menu ul li {
   color: #767676;
   padding: 20px 0;
+}
+header.sticky {
+  background: #1f1e1e;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 /* FOOTER */
