--- a/scss/common.scss
+++ b/scss/common.scss
@@ -18,6 +18,13 @@ section {
 	}
 }
 
+.inner {
+	position: relative;
+	max-width: 1240px;
+	padding: 0 20px;
+	margin: 0 auto;
+}
+
 img {
 	display: block;
 }
@@ -64,13 +71,8 @@ button:active {
   box-shadow: none;
 }
 
-.inner {
-	position: relative;
-	max-width: 1240px;
-	padding: 0 20px;
-	margin: 0 auto;
-}
 
+/* FONT */
 h2 {
 	display: inline-block;
 	text-transform: uppercase;
@@ -96,7 +98,6 @@ h4{
 
 
 /* hedear */
-
 header {
 	width:100%;
 	height: 72px;
@@ -114,6 +115,7 @@ header {
 	}
 
 	.logo {
+		width: 36px;
 		height: 24px;
 		img {
 			width: 100%;
@@ -132,7 +134,14 @@ header {
 			}
 		}
 	}
+
+	&.sticky {
+		background: $bg-color;
+		box-shadow: 0 2px 6px rgba(#000, .15);
+	}
 }
+
+
 
 /* FOOTER */
 footer {
