--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,7 @@
 @import "./mixins.scss";
 
-@font-face {
-	font-family: 'LAB디지털';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/LAB디지털.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
-}
 
-
+/* 애니메이션 효과 모음 */
 @keyframes loop_designTool {
 	0% { content:" Photoshop "; color: $purple;}
 	20% { content:" Photoshop "; color: $purple;}
@@ -32,7 +26,6 @@
 	100% { content:" HTML "; color: $dark_mint;}
 }
 
-
 @keyframes loop_code {
 	0% { transform: translateY(0); transform: skew(0 30deg); }
 	100% { transform: translateY(-100%);  transform: skew(0 30deg);}
@@ -43,7 +36,6 @@
 	50% {transform: translateY(50%); height: 50%;}
 	100% {transform: translateY(100%); height: 100%;}
 }
-
 
 @keyframes rotate_gradient {
   from { background-position:left; }
@@ -57,6 +49,7 @@
 }
 
 
+/* MAIN */
 main {
 	#main_view {
 		margin-top: 72px;
@@ -71,15 +64,12 @@ main {
 		.intro {
 			flex-basis: 50%;
 			margin-top: 10%;
-
-
 			.intro_title {
 				letter-spacing: 0.25rem;
 				font: {
 					size: 1.25rem;
 					weight: 200;
 				}
-				
 				.intro_gradient {
 					display:inline-block;
 					font: {
@@ -248,7 +238,6 @@ main {
 						border: 1px solid rgba($mint, .5);
 						box-sizing: border-box;
 					}
-					
 				}
 			}
 		}
