--- a/css/common.css
+++ b/css/common.css
@@ -123,6 +123,9 @@ header .main_menu ul li {
   color: #767676;
   padding: 20px 0;
 }
+header .main_menu ul li a.active {
+  color: #88d3ce;
+}
 header.sticky {
   background: #1f1e1e;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
