--- a/scss/common.scss
+++ b/scss/common.scss
@@ -131,6 +131,9 @@ header {
 			li {
 				color: $grey;
 				padding: 20px 0 ;
+				a.active {
+					color: $mint;
+				}
 			}
 		}
 	}
@@ -140,7 +143,6 @@ header {
 		box-shadow: 0 2px 6px rgba(#000, .15);
 	}
 }
-
 
 
 /* FOOTER */
