--- a/scss/common.scss
+++ b/scss/common.scss
@@ -3,6 +3,10 @@
 
 /* COMMON */
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	color: #fff;
 	background: $bg-color;
@@ -12,7 +16,7 @@ body {
 }
 
 section {
-	padding-top: 60px;
+	padding-top: 120px;
 	&:first-child {
 		padding-top:0;
 	}
@@ -33,7 +37,7 @@ a {
 	text-decoration: none;
 	color: inherit;
 	letter-spacing: 0.1rem;
-	transition: color .6s;
+	transition: color .4s;
 
 	&:hover {
 		color: #fff;
