--- a/scss/common.scss
+++ b/scss/common.scss
@@ -16,7 +16,7 @@ body {
 }
 
 section {
-	padding-top: 120px;
+	padding-top: 80px;
 	&:first-child {
 		padding-top:0;
 	}
@@ -36,12 +36,11 @@ img {
 a {
 	text-decoration: none;
 	color: inherit;
-	letter-spacing: 0.1rem;
 	transition: color .4s;
 }
 
 .btn {
-	padding: 12px 16px;
+	padding: 10px 16px;
 	background-color: inherit;
 	color: $mint;
 	border: 1px solid $mint;
@@ -60,6 +59,42 @@ a {
 	}
 }
 
+.back-to-position {
+	opacity: 0;
+	transition: 1s;
+}
+.back-to-position.to-top {
+	transform: translateY(150px);
+}
+.show .back-to-position {
+	opacity: 1;
+	transform: translateY(0);
+}
+
+.show .back-to-position.delay-0 {
+	transition-delay: 0s;
+}
+.show .back-to-position.delay-1 {
+	transition-delay: 0.2;
+}
+.show .back-to-position.delay-2 {
+	transition-delay: .4s;
+}
+.show .back-to-position.delay-3 {
+	transition-delay: .6s;
+}
+.show .back-to-position.delay-4 {
+	transition-delay: .8s;
+}
+.show .back-to-position.delay-5 {
+	transition-delay: 1s;
+}
+.show .back-to-position.delay-6 {
+	transition-delay: 1.2s;
+}
+.show .back-to-position.delay-7 {
+	transition-delay: 1.4s;
+}
 
 
 /* input, button 스타일 리셋코드*/
