--- a/css/common.css
+++ b/css/common.css
@@ -16,7 +16,7 @@ body {
 }
 
 section {
-  padding-top: 80px;
+  padding-top: 100px;
 }
 section:first-child {
   padding-top: 0;
@@ -75,7 +75,7 @@ a {
 }
 
 .back-to-position.to-top {
-  transform: translateY(150px);
+  transform: translateY(120px);
 }
 
 .show .back-to-position {
@@ -92,27 +92,27 @@ a {
 }
 
 .show .back-to-position.delay-2 {
-  transition-delay: 0.4s;
+  transition-delay: 0.3s;
 }
 
 .show .back-to-position.delay-3 {
-  transition-delay: 0.6s;
+  transition-delay: 0.4s;
 }
 
 .show .back-to-position.delay-4 {
-  transition-delay: 0.8s;
+  transition-delay: 0.5s;
 }
 
 .show .back-to-position.delay-5 {
-  transition-delay: 1s;
+  transition-delay: 0.6s;
 }
 
 .show .back-to-position.delay-6 {
-  transition-delay: 1.2s;
+  transition-delay: 0.7s;
 }
 
 .show .back-to-position.delay-7 {
-  transition-delay: 1.4s;
+  transition-delay: 0.8s;
 }
 
 /* input, button 스타일 리셋코드*/
@@ -126,10 +126,10 @@ button:active {
 
 /* FONT */
 h2 {
-  display: inline-block;
   text-transform: uppercase;
   -webkit-text-stroke: 1px rgba(136, 211, 206, 0.5);
   color: transparent;
+  line-height: 1;
   font-size: 9rem;
   font-weight: 900;
 }
