--- a/scss/common.scss
+++ b/scss/common.scss
@@ -16,7 +16,7 @@ body {
 }
 
 section {
-	padding-top: 80px;
+	padding-top: 100px;
 	&:first-child {
 		padding-top:0;
 	}
@@ -73,7 +73,7 @@ a {
 	transition: 1s;
 }
 .back-to-position.to-top {
-	transform: translateY(150px);
+	transform: translateY(120px);
 }
 .show .back-to-position {
 	opacity: 1;
@@ -84,25 +84,25 @@ a {
 	transition-delay: 0s;
 }
 .show .back-to-position.delay-1 {
-	transition-delay: 0.2;
+	transition-delay: .2;
 }
 .show .back-to-position.delay-2 {
-	transition-delay: .4s;
+	transition-delay: .3s;
 }
 .show .back-to-position.delay-3 {
-	transition-delay: .6s;
+	transition-delay: .4s;
 }
 .show .back-to-position.delay-4 {
-	transition-delay: .8s;
+	transition-delay: .5s;
 }
 .show .back-to-position.delay-5 {
-	transition-delay: 1s;
+	transition-delay: .6s;
 }
 .show .back-to-position.delay-6 {
-	transition-delay: 1.2s;
+	transition-delay: .7s;
 }
 .show .back-to-position.delay-7 {
-	transition-delay: 1.4s;
+	transition-delay: .8s;
 }
 
 
@@ -118,10 +118,10 @@ button:active {
 
 /* FONT */
 h2 {
-	display: inline-block;
 	text-transform: uppercase;
 	-webkit-text-stroke: 1px rgba($mint, .5);
 	color: transparent;
+	line-height: 1;
 	font: {
 		size:9rem;
 		weight: 900;
