--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,10 +51,8 @@
 
 /* MAIN */
 #main_view {
-//	margin-top: 72px;
-	height: calc(100vh - 72px);
 	.inner {
-		height: 100%;
+		height: calc(100vh - 120px);
 		@include flex-row {
 			justify-content: space-between;
 		}
@@ -145,7 +143,6 @@
 		}
 	}
 
-
 	.scroll_down {
 		.scroll_line {
 			width: 1px;
@@ -171,7 +168,7 @@
 
 #skills {
 	.skills_intro {
-		margin-top: -100px;
+		margin-top: -60px;
 
 		.skills_title {
 			font: {
@@ -198,7 +195,7 @@
 			justify-content: center;
 			gap: 80px;
 		}
-		margin: 60px 0 80px;
+		margin: 50px 0 70px;
 
 		h4{
 			margin:0 0 10px 10px;
@@ -252,18 +249,20 @@
 		float: right;
 	}
 	.project {
-		@include flex-row {
-			justify-content: flex-start;
+		.project_container{
+			@include flex-row {
+				justify-content: flex-start;
+			}
+			position: relative;
+			width: 90%;
+			max-width: 1000px;
+			height: 300px;
+			padding: 30px;
+			margin: 0 auto 80px;
+			background-color: $bg-color;
+			border: 1px solid rgba($mint, .5);
+			border-radius: 0 120px 0 0;
 		}
-		position: relative;
-		width: 90%;
-		max-width: 1000px;
-		height: 300px;
-		padding: 30px;
-		border: 1px solid rgba($mint, .5);
-		border-radius: 0 130px 0 0;
-		background-color: $bg-color;
-		margin: 0 auto 80px;
 
 		.project_number {
 			position: absolute;
@@ -273,11 +272,12 @@
 			color: $mint;
 			line-height: 1;
 			font: {
-				size: 3rem;
+				size: 4rem;
 				weight: 800;
 				style: italic;
 			}
 		}
+
 		.project_image {
 			flex-basis: 55%;
 			overflow: hidden;
@@ -285,6 +285,7 @@
 				width: 100%;
 			}
 		}
+
 		.project_content {
 			flex-basis: 35%;
 			padding: 0 20px;
@@ -297,6 +298,7 @@
 					}
 				}
 			}
+
 			.project_process {
 				margin-bottom: 40px;
 				h4 {
@@ -312,8 +314,10 @@
 
 		/* 프로젝트 짝수 스타일 */
 		&:nth-child(even) {
-			justify-content: flex-end;
-			border-radius: 140px 0 0 0;
+			.project_container{
+				justify-content: flex-end;
+				border-radius: 120px 0 0 0;
+			}
 			.project_number {
 				left: 0;
 			}
@@ -325,7 +329,7 @@
 		&:hover {
 			.project_image{
 				img{
-					animation: preview_site 20s linear;
+					animation: preview_site 15s linear;
 				}
 			}
 		}
