--- a/scss/mediaquery.scss
+++ b/scss/mediaquery.scss
@@ -2,18 +2,11 @@
 	a:hover { color: #fff; }
 }
 
-
+/* TABLET */
 @media (max-width: 1024px) {
   h2 {
     font-size: 8rem;
   }
-
-  #main_view {
-    .inner {
-      flex-direction: column;
-    }
-  }
-
   #skills {
     .skills_intro {
       .skills_title {
@@ -32,19 +25,45 @@
       }
     }
   }
+
+  #works {
+    .project {
+      .project_content {
+        flex-basis: 50%;
+        .project_subject{
+          font-size: 0.875rem;
+          .project_title {
+            font-size: 1.75rem;
+          }
+        }
+        .project_process {
+          h4 {
+            width: 25%;
+          }
+        }
+      }
+    }
+  }
 }
 
+/* MOBILE */
 @media (max-width: 768px) {
+  section {
+    padding-top: 80px;
+  }
   h2 {
     font-size: 5rem;
   }
   
-  h4 {
+  h4 { 
     font-size: 0.875rem;
     line-height: 1.5rem;
   }
 
   #main_view {
+    .inner {
+      flex-direction: column;
+    }
     .intro {
       .intro_title {
         font-size: 1rem;
@@ -76,7 +95,7 @@
 
   #skills {
     .skills_intro {
-      margin-top: -20px;
+      margin-top: 0;
       .skills_title { 
         font-size: 1.75rem;
       }
@@ -107,17 +126,20 @@
       margin: 0;
     }
     .project {
-      width: calc(100% - 40px);
-      flex-direction: column;
-      height: 450px;
-      padding: 20px;
-      border-radius: 0 100px 0 0;
-      margin: 0 0 60px;
+      .project_container{
+        width: calc(100% - 40px);
+        flex-direction: column;
+        height: 450px;
+        padding: 20px;
+        border-radius: 0 100px 0 0;
+        margin: 0 0 60px;
+      }
 
       .project_image {
         order: 1;
         width: 100%;
       }
+
       .project_content { 
         padding: 0;
         .project_subject{
@@ -134,8 +156,11 @@
           font-size: 0.875rem;
         }
       }
+
       &:nth-child(even) {
-        border-radius: 0 100px 0 0;
+        .project_container{
+          border-radius: 0 100px 0 0;
+        }
         .project_number {
           right: 0;
           text-align: end;
